[VAN-7776] Fix calendar is too small

--- a/vtr-ui/src/app/beta/hardware-scan/modal/modal-schedule-new-scan/modal-schedule-new-scan.component.scss
+++ b/vtr-ui/src/app/beta/hardware-scan/modal/modal-schedule-new-scan/modal-schedule-new-scan.component.scss
@@ -167,28 +167,28 @@ input {
 }
 
 :host ::ng-deep .dropdown-menu.show {
-    width: 86%;
-    height: 24rem;
+    width: auto;
+    height: auto;
     font-size: x-small;
 }
 
 //:host ::ng-deep .ngb-dp-header {}
 //:host ::ng-deep .ngb-dp-months {}
 :host ::ng-deep .ngb-dp-day {
-    width: 4.3rem;
+    width: 4.4rem;
     height: 3rem;
     font-size: x-small;
     cursor: default;
 }
 
 :host ::ng-deep .ngb-dp-week-number {
-    width: 4.7rem;
+    width: 4.4rem;
     height: 3rem;
     font-size: x-small;
 }
 
 :host ::ng-deep .ngb-dp-weekday {
-    width: 4.5rem;
+    width: 4.4rem;
     height: 3rem;
     font-size: x-small;
 }
@@ -196,8 +196,8 @@ input {
 :host ::ng-deep .custom-select {
     flex: 1 1 auto;
     /* padding: 0 .5rem; */
-    font-size: 1.1rem;
-    height: 2.85rem;
+    font-size: 1.4rem;
+    height: auto;
 }
 
 :host ::ng-deep .btn-light {
